package com.morris.pattern.factory.demo.v2;

public class GifPictureReaderFactory implements PictureReaderFactory {
    @Override
    public PictureReader createPictureReader() {
        return null;
    }
}
