package com.morris.pattern.factory.demo.v2;

public interface PictureReaderFactory {
     PictureReader createPictureReader();
}
